--- a/styles.css
+++ b/styles.css
@@ -51,4 +51,29 @@ h1 {
         color: black;
         font-size: 3rem;
     }
+
+    h2 {
+        color: gray;
+        font-size: 3rem;
+    }
+
+    .imgg {
+        margin-left: 100px;
+        float: center;
+    }
+
+
+}
+
+@media screen and (max-width:800px) {
+    h1 {
+        color: green;
+        font-size: 2rem;
+    }
+
+    h2 {
+        color: black;
+        font-size: 3rem;
+    }
+    
 }
